--- a/CSGOMatches/WebAPI/Web.config
+++ b/CSGOMatches/WebAPI/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebAPI-20160519081448.mdf;Initial Catalog=aspnet-WebAPI-20160519081448;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DBConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=csgomatches;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
