--- a/CSGOMatches/DAL/DAL.csproj
+++ b/CSGOMatches/DAL/DAL.csproj
@@ -56,11 +56,15 @@
     <Compile Include="Interfaces\IDbContext.cs" />
     <Compile Include="Interfaces\IEFRepository.cs" />
     <Compile Include="Interfaces\IEFRepositoryProvider.cs" />
+    <Compile Include="Interfaces\IMapInMatchRepository.cs" />
+    <Compile Include="Interfaces\IMapRepository.cs" />
     <Compile Include="Interfaces\IMatchRepository.cs" />
     <Compile Include="Interfaces\ITeamRepository.cs" />
     <Compile Include="Interfaces\IUOW.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EFRepository.cs" />
+    <Compile Include="Repositories\MapInMatchRepository.cs" />
+    <Compile Include="Repositories\MapRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
     <Compile Include="Repositories\TeamRepository.cs" />
     <Compile Include="UOW.cs" />
