--- a/CSGOMatches/Web/Web.csproj
+++ b/CSGOMatches/Web/Web.csproj
@@ -158,13 +158,16 @@
     <Content Include="app\app.js" />
     <Content Include="app\controllers\homeController.js" />
     <Content Include="app\controllers\loginlogoutController.js" />
+    <Content Include="app\controllers\matchController.js" />
     <Content Include="app\services\matchesService.js" />
     <Content Include="app\services\teamsService.js" />
     <Content Include="app\services\usersService.js" />
     <Content Include="app\services\valuesService.js" />
+    <Content Include="app\views\addmatch.html" />
     <Content Include="app\views\addteam.html" />
     <Content Include="app\views\home.html" />
     <Content Include="app\views\login.html" />
+    <Content Include="app\views\matchview.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\styles\login.css" />
