--- a/CSGOMatches/Web/Web.csproj
+++ b/CSGOMatches/Web/Web.csproj
@@ -159,6 +159,7 @@
     <Content Include="app\controllers\homeController.js" />
     <Content Include="app\controllers\loginlogoutController.js" />
     <Content Include="app\controllers\matchController.js" />
+    <Content Include="app\controllers\matchviewController.js" />
     <Content Include="app\services\matchesService.js" />
     <Content Include="app\services\teamsService.js" />
     <Content Include="app\services\usersService.js" />
