--- a/CSGOMatches/BLL/BLL.csproj
+++ b/CSGOMatches/BLL/BLL.csproj
@@ -50,12 +50,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\MapDTO.cs" />
+    <Compile Include="DTO\MatchAddDTO.cs" />
     <Compile Include="DTO\MatchDTO.cs" />
+    <Compile Include="DTO\CommentDTO.cs" />
+    <Compile Include="DTO\PlayerDTO.cs" />
+    <Compile Include="DTO\TeamDTO.cs" />
+    <Compile Include="Factories\CommentFactory.cs" />
     <Compile Include="Factories\MapFactory.cs" />
     <Compile Include="Factories\MatchFactory.cs" />
+    <Compile Include="Factories\PlayerFactory.cs" />
+    <Compile Include="Factories\TeamFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\CommentService.cs" />
     <Compile Include="Service\MapService.cs" />
     <Compile Include="Service\MatchService.cs" />
+    <Compile Include="Service\PlayerService.cs" />
+    <Compile Include="Service\TeamService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
