--- a/CSGOMatches/DAL/DAL.csproj
+++ b/CSGOMatches/DAL/DAL.csproj
@@ -53,19 +53,25 @@
     <Compile Include="DataBaseContext.cs" />
     <Compile Include="Helpers\EFRepositoryFactories.cs" />
     <Compile Include="Helpers\IEFRepositoryProvider.cs" />
+    <Compile Include="Interfaces\ICommentRepository.cs" />
     <Compile Include="Interfaces\IDbContext.cs" />
     <Compile Include="Interfaces\IEFRepository.cs" />
     <Compile Include="Interfaces\IEFRepositoryProvider.cs" />
     <Compile Include="Interfaces\IMapInMatchRepository.cs" />
     <Compile Include="Interfaces\IMapRepository.cs" />
     <Compile Include="Interfaces\IMatchRepository.cs" />
+    <Compile Include="Interfaces\IPlayerInTeamRepository.cs" />
+    <Compile Include="Interfaces\IPlayerRepository.cs" />
     <Compile Include="Interfaces\ITeamRepository.cs" />
     <Compile Include="Interfaces\IUOW.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CommentRepository.cs" />
     <Compile Include="Repositories\EFRepository.cs" />
     <Compile Include="Repositories\MapInMatchRepository.cs" />
     <Compile Include="Repositories\MapRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
+    <Compile Include="Repositories\PlayerInTeamRepository.cs" />
+    <Compile Include="Repositories\PlayerRepository.cs" />
     <Compile Include="Repositories\TeamRepository.cs" />
     <Compile Include="UOW.cs" />
   </ItemGroup>
