--- a/CSGOMatches/Web/Web.csproj
+++ b/CSGOMatches/Web/Web.csproj
@@ -156,19 +156,34 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\addeditteamController.js" />
     <Content Include="app\controllers\homeController.js" />
-    <Content Include="app\controllers\loginlogoutController.js" />
+    <Content Include="app\controllers\loginController.js" />
+    <Content Include="app\controllers\logoutController.js" />
+    <Content Include="app\controllers\mainController.js" />
     <Content Include="app\controllers\matchController.js" />
     <Content Include="app\controllers\matchviewController.js" />
+    <Content Include="app\controllers\playersController.js" />
+    <Content Include="app\controllers\teamsController.js" />
+    <Content Include="app\services\baseService.js" />
+    <Content Include="app\services\commentService.js" />
+    <Content Include="app\services\headerService.js" />
     <Content Include="app\services\matchesService.js" />
+    <Content Include="app\services\playersService.js" />
     <Content Include="app\services\teamsService.js" />
     <Content Include="app\services\usersService.js" />
     <Content Include="app\services\valuesService.js" />
     <Content Include="app\views\addmatch.html" />
     <Content Include="app\views\addteam.html" />
+    <Content Include="app\views\footer.html" />
+    <Content Include="app\views\header.html" />
     <Content Include="app\views\home.html" />
     <Content Include="app\views\login.html" />
+    <Content Include="app\views\logout.html" />
     <Content Include="app\views\matchview.html" />
+    <Content Include="app\views\players.html" />
+    <Content Include="app\views\teamAddEdit.html" />
+    <Content Include="app\views\teams.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\styles\login.css" />
