--- a/CSGOMatches/WebAPI/WebAPI.csproj
+++ b/CSGOMatches/WebAPI/WebAPI.csproj
@@ -264,8 +264,10 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\api\CommentsController.cs" />
     <Compile Include="Controllers\api\MapsController.cs" />
     <Compile Include="Controllers\api\MatchesController.cs" />
+    <Compile Include="Controllers\api\PlayersController.cs" />
     <Compile Include="Controllers\api\TeamsController.cs" />
     <Compile Include="Controllers\api\VotesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -276,8 +278,10 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CommentViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MatchViewModels.cs" />
+    <Compile Include="Models\TeamViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
