--- a/CSGOMatches/WebAPI/WebAPI.csproj
+++ b/CSGOMatches/WebAPI/WebAPI.csproj
@@ -280,7 +280,9 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CommentViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\MapViewModels.cs" />
     <Compile Include="Models\MatchViewModels.cs" />
+    <Compile Include="Models\PlayerViewModels.cs" />
     <Compile Include="Models\TeamViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
